feat: currency activity implemented
